kustomize/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kjer-si
  labels:
    app: kjer-si
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kjer-si
  template:
    metadata:
      labels:
        app: kjer-si
    spec:
      containers:
      - name: kjer-si
        image: kjer-si # kustomize thing
        ports:
        - name: http
          containerPort: 4000
          protocol: TCP
        livenessProbe:
          tcpSocket:
            port: http
          initialDelaySeconds: 10
          periodSeconds: 15
        readinessProbe:
          httpGet:
            path: /api/health
            port: http
          initialDelaySeconds: 15
          periodSeconds: 30
          timeoutSeconds: 5
        resources:
          requests:
            memory: 1Gi
            cpu: 500m
          limits:
            memory: 1Gi
            cpu: 500m
