kustomize/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kjer-si
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: "letsencrypt-production"
spec:
  tls:
  - hosts:
    - kjersi.lb.djnd.si
    secretName: kjersi-tls
  rules:
  - host: kjersi.lb.djnd.si
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kjer-si
            port:
              number: 80
